[gd_scene load_steps=4 format=3 uid="uid://c2emj8miafkni"]

[ext_resource type="Script" uid="uid://dykxw48pnfpde" path="res://PlantillasGenerales/plantilla_microjuego.gd" id="1_c5i8m"]
[ext_resource type="Texture2D" uid="uid://cnpij3bucijph" path="res://Fondos/Fondocielo.png" id="2_gu2is"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fhsym"]
bg_color = Color(0.164706, 0.164706, 0.164706, 0.486275)

[node name="PlantillaMicrojuego" type="Node2D"]
script = ExtResource("1_c5i8m")

[node name="TextureRect" type="TextureRect" parent="."]
offset_top = 1.0
offset_right = 1918.0
offset_bottom = 1080.0
texture = ExtResource("2_gu2is")
metadata/_edit_use_anchors_ = true
metadata/_edit_lock_ = true

[node name="TimerApertura" type="Timer" parent="."]
one_shot = true

[node name="TimerRespuesta" type="Timer" parent="."]
one_shot = true

[node name="TimerBarra" type="Timer" parent="."]
one_shot = true

[node name="BarraTiempo" type="ProgressBar" parent="."]
offset_left = 1370.0
offset_top = 1021.0
offset_right = 1770.0
offset_bottom = 1048.0
max_value = 1.5
value = 1.5
show_percentage = false
metadata/_edit_use_anchors_ = true

[node name="TextoControles" type="Label" parent="."]
offset_left = -13.0
offset_top = 753.0
offset_right = 437.0
offset_bottom = 1089.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 80
theme_override_styles/normal = SubResource("StyleBoxFlat_fhsym")
text = "Controles
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextoInstruccion" type="Label" parent="."]
offset_left = 368.0
offset_top = 404.0
offset_right = 1608.0
offset_bottom = 635.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 80
theme_override_styles/normal = SubResource("StyleBoxFlat_fhsym")
text = "Instruccion"
horizontal_alignment = 1
vertical_alignment = 1
